arbitrator-active-active/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fis-arbitrator-active-active
  namespace: open-cluster-management
spec:
  selector:
    app: fis-arbitrator-active-active
  ports:
    - port: 8080
      targetPort: 8080
      name: http
